# rusty-git-gui

./: .gitignore  Cargo.toml  LICENSE  README  build-max-performance.sh  build-release.sh  run-tests.sh  sum_cargo_tests.py
integration_tests/amending_commit/: Cargo.toml
integration_tests/committing/: Cargo.toml
integration_tests/common/: Cargo.toml
integration_tests/common/src/: file_changes_view_utils.rs  gui_assertions.rs  gui_interactions.rs  lib.rs  repository_assertions.rs  setup.rs  test_gui.rs
integration_tests/loading_repository/: Cargo.toml
integration_tests/refreshing_repository/: Cargo.toml
integration_tests/staging/: Cargo.toml
integration_tests/unstaging/: Cargo.toml
src/: app_quitter.rs  app_setup.rs  application_window.rs  color.rs  commit_amend_checkbox.rs  commit_button.rs  commit_diff.rs  commit_diff_view.rs  commit_log.rs  commit_log_author_filter_entry.rs  commit_log_author_filter_widgets.rs  commit_log_column.rs  commit_log_filters.rs  commit_log_filters_combo_box.rs  commit_log_filters_view.rs  commit_log_model.rs  commit_log_model_filter.rs  commit_log_save_filter_button.rs  commit_log_save_filter_dialog.glade  commit_log_save_filter_dialog.rs  commit_log_selections_comparer.rs  commit_log_show_filter_button.rs  commit_log_summary_filter_widgets.rs  commit_log_text_filter_widgets.rs  commit_log_view.rs  commit_message.rs  commit_message_reader.rs  commit_message_view.rs  commit_message_view_observer.rs  config.rs  config_path.rs  config_store.rs  converters.rs  date_time.rs  diff_and_commit_pane.rs  diff_and_commit_paned.rs  diff_colorizer.rs  diff_formatter.rs  diff_line_printer.rs  diff_maker.rs  (+63 more)
tests/: allow_amending_commit_when_commit_is_found.rs  allow_committing_when_change_is_staged_and_commit_message_is_filled.rs  allow_committing_when_one_of_staged_changes_is_unstaged_and_message_is_filled.rs  amend_commit_by_changing_file.rs  amend_commit_by_changing_message.rs  commit_staged_changes_given_no_previous_commits.rs  commit_staged_changes_given_one_previous_commit.rs  disabling_commit_amend_should_restore_stashed_commit_message.rs  enabling_commit_amend_should_fill_commit_message_from_previous_commit.rs  forbid_amending_commit_when_no_commit_is_found.rs  forbid_committing_after_message_is_cleared.rs  forbid_committing_when_change_is_staged_but_commit_message_is_empty.rs  forbid_committing_when_last_staged_change_is_unstaged_and_message_is_filled.rs  forbid_committing_when_no_changes_are_staged.rs  integration_tests.rs  load_empty_repository.rs  load_repository_with_commit_and_modified_unstaged_file.rs  load_repository_with_deleted_staged_file.rs  load_repository_with_deleted_unstaged_file.rs  load_repository_with_modified_staged_file.rs  load_repository_with_modified_unstaged_file.rs  load_repository_with_modified_unstaged_file_and_same_new_staged_file.rs  load_repository_with_multiple_kinds_of_files.rs  load_repository_with_new_staged_file.rs  load_repository_with_new_unstaged_empty_file.rs  load_repository_with_new_unstaged_file.rs  load_repository_with_new_unstaged_file_in_subdirectory.rs  load_repository_with_renamed_unstaged_file.rs  refresh_empty_repository.rs  refresh_empty_repository_after_new_file_is_created.rs  refresh_empty_repository_after_new_file_was_created.rs  refresh_repository_with_new_selected_staged_file_after_it_changes_to_modified.rs  refresh_repository_with_new_staged_file_after_it_changes_to_modified.rs  refresh_repository_with_three_untracked_files_after_first_is_removed.rs  refresh_repository_with_three_untracked_files_after_first_two_are_removed.rs  refresh_repository_with_three_untracked_files_after_last_is_removed.rs  refresh_repository_with_three_untracked_files_after_middle_is_removed.rs  refresh_repository_with_untracked_file.rs  refresh_repository_with_untracked_file_after_it_changes_to_renamed.rs  refresh_repository_with_untracked_file_after_it_is_committed_and_modified.rs  (+22 more)
tests/amending_commit/: allow_amending_commit_when_commit_is_found.rs  allow_enabling_amend_mode_after_creating_first_commit.rs  allow_enabling_amend_mode_when_commit_is_found.rs  amend_commit_by_changing_file.rs  amend_commit_by_changing_message.rs  disabling_commit_amend_should_restore_stashed_commit_message.rs  enable_amend_mode_given_commit_with_modified_file.rs  enable_amend_mode_given_commit_with_new_file.rs  enable_amend_mode_given_selected_staged_modified_file.rs  enabling_commit_amend_should_fill_commit_message_from_previous_commit.rs  forbid_amending_commit_when_no_commit_is_found.rs  forbid_enabling_amend_mode_when_no_commit_is_found.rs  mod.rs  stage_new_file_for_amend_which_in_normal_mode_was_staged_for_removal.rs  unstage_modified_file_in_amend_mode.rs  unstage_new_file_in_amend_mode.rs
tests/committing/: allow_committing_when_change_is_staged_and_commit_message_is_filled.rs  allow_committing_when_one_of_staged_changes_is_unstaged_and_message_is_filled.rs  commit_staged_changes_given_no_previous_commits.rs  commit_staged_changes_given_one_previous_commit.rs  forbid_committing_after_message_is_cleared.rs  forbid_committing_when_change_is_staged_but_commit_message_is_empty.rs  forbid_committing_when_last_staged_change_is_unstaged_and_message_is_filled.rs  forbid_committing_when_no_changes_are_staged.rs  mod.rs
tests/common/: accessors.rs  actions.rs  assertions.rs  file_change_view_utils.rs  file_changes_model_utils.rs  file_changes_view_utils.rs  gui_assertions.rs  gui_interactions.rs  mod.rs  repository_assertions.rs  repository_status_utils.rs  setup.rs  test_gui.rs  utils.rs
tests/loading_repository/: load_empty_repository.rs  load_repository_with_commit_and_modified_unstaged_file.rs  mod.rs  (+11 more)
(+91 files in other folders)
