[package]
name = "rusty-git-gui"
version = "0.1.0"
authors = ["Arkadiusz Piekarz <piekarzarkadiusz@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = { version = "1.0.72", default-features = false, features = ["backtrace", "std"] }
color-backtrace = { version = "0.6.0", default-features = false, optional = true }
dirs = { version = "5.0.1", default-features = false }
git2 = { version = "0.17.2", default-features = false }
gtk = { version = "0.17.1", default-features = false }
itertools = { version = "0.11.0", default-features = false, features = ["use_std"] }
regex = "1.9.1"
serde = { version ="1.0.178", default-features = false, features = ["derive"] }
similar = {version = "2.2.1", default-features = false, features = ["text"] }
termcolor = { version = "1.2.0", default-features = false, optional = true }
time = { version = "0.3.23", default-features = false, features = ["formatting", "macros"] }
to_trait = { version = "0.1.1", default-features = false }
toml = { version = "0.7.6", default-features = false, features = ["display", "parse"] }

[dev-dependencies]
gtk-test = {version = "0.17.0", default-features = false }
pretty_assertions = { version = "1.4.0", default-features = false, features = ["std"] }
rusty-fork = { version = "0.3.0", default-features = false }
tempfile = { version = "3.7.0", default-features = false }

[features]
use_color_backtrace = ["color-backtrace", "termcolor"]

[profile.release]
codegen-units = 1
lto = "fat"
