[package]
name = "common"
version = "0.1.0"
authors = ["Arkadiusz Piekarz <piekarzarkadiusz@gmail.com>"]
edition = "2018"

[dependencies]
glib = { version = "0.10.0", default-features = false }
gtk = { version = "0.9.0", default-features = false, features = ["v3_22"] }
gtk-test = {version = "0.6.0", default-features = false }
itertools = { version = "0.9.0", default-features = false, features = ["use_std"] }
rusty-git-gui = { path = "../.." }
pretty_assertions = { version = "0.6.1", default-features = false }
tempfile = { version = "3.1.0", default-features = false }